recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:12: error: not found: value i
  while (i<4) {
         ^FourSquare:13: error: not found: value i
    i += 1
    ^