recursion.logo.square.FourSquare.scala.code
override def run() {
  def carre(x:Double) = {
  var i:Int = 0
 while (i<4) {
   i += 1
 avance(x)
 droite(90.00)
 }
  }
 
  var j:Int = 0
  while (i<4) {
    i += 1
  carre(100)
   droite(90.00)
  }
}
